--- a/social-media/Client/src/components/Post/Post.css
+++ b/social-media/Client/src/components/Post/Post.css
@@ -20,11 +20,12 @@ b {
 .mediaGallery {
   display: flex;
   gap: 0.5rem;
+  height: 10rem;
 }
 
 .media {
   width: 100%;
-  height: auto;
+
   border-radius: 0.5rem;
   object-fit: cover;
 }
@@ -45,4 +46,37 @@ b {
 .detail {
   display: flex;
   flex-direction: column;
+}
+
+#media1 {
+  max-height: 15rem;
+}
+
+.loader {
+  width: 100%;
+  height: 4.8px;
+  display: inline-block;
+  position: relative;
+  background: rgba(0, 0, 0, 0.15);
+  overflow: hidden;
+}
+.loader::after {
+  content: "";
+  box-sizing: border-box;
+  width: 0;
+  height: 4.8px;
+  background: #34e119;
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: animFw 10s linear infinite;
+}
+
+@keyframes animFw {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
 }
