--- a/social-media/Client/src/components/Post/Post.css
+++ b/social-media/Client/src/components/Post/Post.css
@@ -25,7 +25,6 @@ b {
 
 .media {
   width: 100%;
-
   border-radius: 0.5rem;
   object-fit: cover;
 }
@@ -33,7 +32,7 @@ b {
 .mediaGallery img,
 .mediaGallery video {
   width: calc(50% - 0.25rem); /* Adjust width if needed */
-  height: auto;
+  height: 165px;
   border-radius: 0.5rem;
 }
 
@@ -60,6 +59,7 @@ b {
   background: rgba(0, 0, 0, 0.15);
   overflow: hidden;
 }
+
 .loader::after {
   content: "";
   box-sizing: border-box;
@@ -79,4 +79,115 @@ b {
   100% {
     width: 100%;
   }
+}
+
+/* Modal Overlay */
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* Modal Content */
+.modalContent {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 80%;
+  max-width: 500px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+}
+
+/* Textarea Styling */
+.modalContent textarea {
+  width: 95%;
+  height: 150px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  resize: none;
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 20px; /* Space between textarea and buttons */
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s ease;
+}
+
+.modalContent textarea:focus {
+  border-color: #007bff;
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(38, 143, 255, 0.25);
+}
+
+/* Modal Buttons */
+.modalButtons {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
+}
+
+.modalButtons button {
+  margin-left: 10px;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.modalButtons button:first-child {
+  background-color: #007bff;
+  color: white;
+}
+
+.modalButtons button:last-child {
+  background-color: #ccc;
+}
+
+/* Replies Section */
+.repliesSection {
+  max-height: 300px; /* Adjust height as needed */
+  overflow-y: auto; /* Enable vertical scrolling */
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+  margin-top: 20px;
+  padding: 10px;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+
+.reply {
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 4px;
+  background-color: #f9f9f9;
+}
+
+.reply span {
+  font-weight: bold;
+}
+
+.reply p {
+  margin: 5px 0 0;
+}
+
+/* Scrollbar styling for Webkit browsers */
+.repliesSection::-webkit-scrollbar {
+  width: 8px;
+}
+
+.repliesSection::-webkit-scrollbar-thumb {
+  background-color: #007bff;
+  border-radius: 4px;
+}
+
+.repliesSection::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
 }
